--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
  
 <body>
     <nav>logo</nav>
+    <img src="bild2" alt="">
+    <img src="bild3" alt="">
+    <img src="bild2" alt="">
     
 </body>
 </html>
